--- a/openmrs/i18n/clinical/locale_en.json
+++ b/openmrs/i18n/clinical/locale_en.json
@@ -34,7 +34,7 @@
   "DASHBOARD_TITLE_PULSE": "Pulse",
   "DASHBOARD_TITLE_FORMS2_DISPLAY_CONTROL_KEY":"Forms-2",
   "DASHBOARD_TITLE_FORMS2_OBS_TO_OBS_DISPLAY_CONTROL_KEY":"Forms-2 ObsToObs",
-  "DASHBOARD_TITLE_HOLA_MUNDO":"Hola Mundo",
+  "DASHBOARD_TITLE_NOTIFICACION_GES":"Notificacion GES",
 
   "DASHBOARD_TAB_GENERAL_KEY": "General",
   "DASHBOARD_TAB_TRENDS_KEY": "Trends",
