--- a/openmrs/i18n/clinical/locale_es.json
+++ b/openmrs/i18n/clinical/locale_es.json
@@ -36,7 +36,7 @@
   "DASHBOARD_TITLE_FORMS2_DISPLAY_CONTROL_KEY":"Formulario-2",
   "DASHBOARD_TITLE_FORMS2_OBS_TO_OBS_DISPLAY_CONTROL_KEY":"Observaciones Formulario-2",
 
-  "DASHBOARD_TITLE_HOLA_MUNDO":"Hola Mundo",
+  "DASHBOARD_TITLE_NOTIFICACION_GES":"Notificacion GES",
 
   "DASHBOARD_TAB_GENERAL_KEY": "General",
   "DASHBOARD_TAB_TRENDS_KEY": "Tendencias",
