--- a/openmrs/i18n/clinical/locale_zh.json
+++ b/openmrs/i18n/clinical/locale_zh.json
@@ -1,8 +1,8 @@
 {
   "MODULE_LABEL_ACTIVE_KEY": "活跃",
-  "MODULE_LABEL_PROGRAMS_KEY": "项目",
-  "MODULE_LABEL_MY_PATIENTS_KEY": "我的病人",
-  "MODULE_LABEL_ACTIVE_PATIENTS_BY_LOCATION": "科室病人",
+  "MODULE_LABEL_PROGRAMS_KEY": "Programs",
+  "MODULE_LABEL_MY_PATIENTS_KEY": "My Patients",
+  "MODULE_LABEL_ACTIVE_PATIENTS_BY_LOCATION": "PatientsByLocation",
   "MODULE_LABEL_OPD_1_KEY": "OPD-1",
   "MODULE_LABEL_ALL_KEY": "全部",
 
@@ -16,7 +16,7 @@
   "DASHBOARD_TITLE_DISPOSITION_KEY": "处置",
   "DASHBOARD_TITLE_DIAGNOSIS_KEY": "Diagnoses",
   "DASHBOARD_TITLE_ADMISSION_DETAILS_KEY": "入院详情",
-  "DASHBOARD_TITLE_NUTRITIONAL_VALUES_KEY": "营养值",
+  "DASHBOARD_TITLE_NUTRITIONAL_VALUES_KEY": "Nutritional Values",
   "DASHBOARD_TITLE_SECOND_VITALS_KEY": "第二体征",
   "DASHBOARD_TITLE_GYNAECOLOGY_KEY": "妇科",
   "DASHBOARD_TITLE_HISTORY_AND_EXAMINATIONS_KEY": "历史和体检",
@@ -42,7 +42,7 @@
   "DASHBOARD_TAB_ORDERS_KEY": "医嘱",
 
   "LAB_INVESTIGATIONS_KEY":"实验室观察",
-  "PACS_ORDERS_VISIT_PAGE_KEY": "Pacs 医嘱就诊页",
+  "RADIOLOGY_ORDERS_KEY": "Radiology Orders",
 
   "DISCHARGE_SUMMARY_DIAGNOSIS_KEY" :"Diagnoses",
 
@@ -73,7 +73,7 @@
   "PATIENT_VISIT_PAGE_KEY":"病人就诊页面",
   "HOME_DASHBOARD_KEY":"仪表盘首页",
   "MEDICATION_CHANGE_DURATION_BUTTON": "改变时长",
-  "DASHBOARD_TITLE_Consultation_KEY": "咨询问诊记录",
+  "DASHBOARD_TITLE_Consultation_KEY": "Consultation Notes",
   "DASHBOARD_TITLE_APPOINTMENTS_KEY": "预约",
   "DASHBOARD_APPOINTMENTS_SLOT_KEY": "时段",
   "DASHBOARD_APPOINTMENTS_SERVICE_KEY": "服务",
@@ -88,12 +88,12 @@
   "DASHBOARD_NO_UPCOMING_APPOINTMENTS_KEY": "没有将来预约",
   "DASHBOARD_TELECON_KEY": "远程会诊",
   "DASHBOARD_JOIN_TELECON_KEY": "加入远程会诊",
-  "DASHBOARD_TITLE_FORMS2_DISPLAY_EDIT_FORMS2_FORMS": "显示和编辑表单(2.0)",
-  "PROGRAM_HIV_PROGRAM": "HIV 项目",
-  "PROGRAM_TB_PROGRAM": "肺结核项目",
-  "PROGRAM_ID_NUMBER": "ID号",
-  "PROGRAM_TREATMENT_DATE": "治疗日期",
-  "PROGRAM_COMORBIDITES": "合并症",
-  "PROGRAM_DOCTORINCHARGE": "主管医生",
-  "PROGRAM_PATIENT_STAGE": "病人阶段"
+  "DASHBOARD_TITLE_FORMS2_DISPLAY_EDIT_FORMS2_FORMS": "Display and Edit Forms (2.0)",
+  "PROGRAM_HIV_PROGRAM": "HIV Program",
+  "PROGRAM_TB_PROGRAM": "TB Program",
+  "PROGRAM_ID_NUMBER": "ID Number",
+  "PROGRAM_TREATMENT_DATE": "Treatment Date",
+  "PROGRAM_COMORBIDITES": "Co-morbidites",
+  "PROGRAM_DOCTORINCHARGE": "Doctor In-Charge",
+  "PROGRAM_PATIENT_STAGE": "Patient Stage"
 }
