--- a/openmrs/i18n/clinical/locale_ar.json
+++ b/openmrs/i18n/clinical/locale_ar.json
@@ -1,9 +1,9 @@
 {
   "MODULE_LABEL_ACTIVE_KEY": "الحالي",
-  "MODULE_LABEL_PROGRAMS_KEY": "البرامج",
-  "MODULE_LABEL_MY_PATIENTS_KEY": "المرضي",
-  "MODULE_LABEL_ACTIVE_PATIENTS_BY_LOCATION": "المرضي حسب المكان",
-  "MODULE_LABEL_OPD_1_KEY": "العيادات الخارجية",
+  "MODULE_LABEL_PROGRAMS_KEY": "Programs",
+  "MODULE_LABEL_MY_PATIENTS_KEY": "My Patients",
+  "MODULE_LABEL_ACTIVE_PATIENTS_BY_LOCATION": "PatientsByLocation",
+  "MODULE_LABEL_OPD_1_KEY": "OPD-1",
   "MODULE_LABEL_ALL_KEY": "الكل",
 
   "DASHBOARD_TITLE_LAB_RESULTS_KEY": "نتائج المعمل",
@@ -16,7 +16,7 @@
   "DASHBOARD_TITLE_DISPOSITION_KEY": "التحويل",
   "DASHBOARD_TITLE_DIAGNOSIS_KEY": "Diagnoses",
   "DASHBOARD_TITLE_ADMISSION_DETAILS_KEY": "تفاصيل التحويل الداخلي",
-  "DASHBOARD_TITLE_NUTRITIONAL_VALUES_KEY": "القيم الغذائية",
+  "DASHBOARD_TITLE_NUTRITIONAL_VALUES_KEY": "Nutritional Values",
   "DASHBOARD_TITLE_SECOND_VITALS_KEY": "القياسات الحيوية الثانوية",
   "DASHBOARD_TITLE_GYNAECOLOGY_KEY": "قسم النساء",
   "DASHBOARD_TITLE_HISTORY_AND_EXAMINATIONS_KEY": "التاريخ المرضي والفحوصات",
@@ -42,7 +42,7 @@
   "DASHBOARD_TAB_ORDERS_KEY": "الطلبات",
 
   "LAB_INVESTIGATIONS_KEY":"الفحوصات المعملية",
-  "PACS_ORDERS_VISIT_PAGE_KEY": "صفحة زيارة طلبات الأشعة",
+  "RADIOLOGY_ORDERS_KEY": "Radiology Orders",
 
   "DISCHARGE_SUMMARY_DIAGNOSIS_KEY" :"Diagnoses",
 
@@ -73,7 +73,7 @@
   "PATIENT_VISIT_PAGE_KEY":"صفحة الزيارة للمريض",
   "HOME_DASHBOARD_KEY":"الصفحة الرئيسية",
   "MEDICATION_CHANGE_DURATION_BUTTON": "تغيير المدة",
-  "DASHBOARD_TITLE_Consultation_KEY": "ملاحظات الاستشارة",
+  "DASHBOARD_TITLE_Consultation_KEY": "Consultation Notes",
   "DASHBOARD_TITLE_APPOINTMENTS_KEY": "المواعيد",
   "DASHBOARD_APPOINTMENTS_SLOT_KEY": "الفترة الزمنية",
   "DASHBOARD_APPOINTMENTS_SERVICE_KEY": "خدمة",
