--- a/openmrs/i18n/clinical/locale_de.json
+++ b/openmrs/i18n/clinical/locale_de.json
@@ -1,7 +1,7 @@
 {
   "MODULE_LABEL_ACTIVE_KEY": "Aktiv",
-  "MODULE_LABEL_PROGRAMS_KEY": "Programme",
-  "MODULE_LABEL_MY_PATIENTS_KEY": "Meine Patienten",
+  "MODULE_LABEL_PROGRAMS_KEY": "Programs",
+  "MODULE_LABEL_MY_PATIENTS_KEY": "My Patients",
   "MODULE_LABEL_ACTIVE_PATIENTS_BY_LOCATION": "PatientsByLocation",
   "MODULE_LABEL_OPD_1_KEY": "OPD-1",
   "MODULE_LABEL_ALL_KEY": "Alle",
@@ -42,7 +42,7 @@
   "DASHBOARD_TAB_ORDERS_KEY": "Orders",
 
   "LAB_INVESTIGATIONS_KEY":"Lab Investigations",
-  "PACS_ORDERS_VISIT_PAGE_KEY": "Pacs Orders Visit Page",
+  "RADIOLOGY_ORDERS_KEY": "Radiology Orders",
 
   "DISCHARGE_SUMMARY_DIAGNOSIS_KEY" :"Diagnoses",
 
