--- a/openmrs/i18n/clinical/locale_fr.json
+++ b/openmrs/i18n/clinical/locale_fr.json
@@ -1,7 +1,7 @@
 {
   "MODULE_LABEL_ACTIVE_KEY": "actif",
-  "MODULE_LABEL_PROGRAMS_KEY": "programmes",
-  "MODULE_LABEL_MY_PATIENTS_KEY": "Mes patients",
+  "MODULE_LABEL_PROGRAMS_KEY": "Programs",
+  "MODULE_LABEL_MY_PATIENTS_KEY": "My Patients",
   "MODULE_LABEL_ACTIVE_PATIENTS_BY_LOCATION": "PatientsByLocation",
   "MODULE_LABEL_OPD_1_KEY": "OPD-1",
   "MODULE_LABEL_ALL_KEY": "Tous",
@@ -14,9 +14,9 @@
   "DASHBOARD_TITLE_PROGRAMS_KEY": "programmes",
   "DASHBOARD_TITLE_TREATMENTS_KEY": "traitements",
   "DASHBOARD_TITLE_DISPOSITION_KEY": "disposition",
-  "DASHBOARD_TITLE_DIAGNOSIS_KEY": "Diagnoses",
+  "DASHBOARD_TITLE_DIAGNOSIS_KEY": "Diagnostics",
   "DASHBOARD_TITLE_ADMISSION_DETAILS_KEY": "Détails d'admission",
-  "DASHBOARD_TITLE_NUTRITIONAL_VALUES_KEY": "Valeurs nutritionnelles",
+  "DASHBOARD_TITLE_NUTRITIONAL_VALUES_KEY": "Nutritional Values",
   "DASHBOARD_TITLE_SECOND_VITALS_KEY": "deuxième Vitals",
   "DASHBOARD_TITLE_GYNAECOLOGY_KEY": "Gynécologie",
   "DASHBOARD_TITLE_HISTORY_AND_EXAMINATIONS_KEY": "Histoire et examens",
@@ -24,46 +24,46 @@
   "DASHBOARD_TITLE_NAVIGATION_LINKS_CONTROL_KEY": "Navigation Links contrôle",
   "DASHBOARD_TITLE_RADIOLOGY_ORDERS_KEY": "radiologie commandes",
   "DASHBOARD_TITLE_VITALS_KEY": "Vitals",
-  "DASHBOARD_TITLE_PATIENT_INFORMATION_KEY": "Patient Information",
-  "DASHBOARD_TITLE_BACTERIOLOGY_RESULTS_KEY":"Bacteriology Results",
-  "DASHBOARD_TITLE_FORMS_DISPLAY_CONTROL_KEY":"Forms",
-  "DASHBOARD_TITLE_GROWTH_CHART": "Growth Chart",
+  "DASHBOARD_TITLE_PATIENT_INFORMATION_KEY": "Information du patient",
+  "DASHBOARD_TITLE_BACTERIOLOGY_RESULTS_KEY":"Résultats bactériologiques",
+  "DASHBOARD_TITLE_FORMS_DISPLAY_CONTROL_KEY":"Formulaires",
+  "DASHBOARD_TITLE_GROWTH_CHART": "Tableau de croissance",
   "DASHBOARD_TITLE_BLOOD_PRESSURE": "BP",
-  "DASHBOARD_TITLE_WEIGHT_BMI": "Weight/BMI",
-  "DASHBOARD_TITLE_DIABETES_BLOOD_SUGAR": "Diabetes/Blood Sugar",
-  "DASHBOARD_TITLE_PULSE": "Pulse",
-  "DASHBOARD_TITLE_FORMS2_DISPLAY_CONTROL_KEY":"Forms-2",
-  "DASHBOARD_TITLE_FORMS2_OBS_TO_OBS_DISPLAY_CONTROL_KEY":"Forms-2 ObsToObs",
+  "DASHBOARD_TITLE_WEIGHT_BMI": "Poids/IMC",
+  "DASHBOARD_TITLE_DIABETES_BLOOD_SUGAR": "Diabète/sucre sanguin",
+  "DASHBOARD_TITLE_PULSE": "Impulsion",
+  "DASHBOARD_TITLE_FORMS2_DISPLAY_CONTROL_KEY":"Formulaires-2",
+  "DASHBOARD_TITLE_FORMS2_OBS_TO_OBS_DISPLAY_CONTROL_KEY":"Formulaires-2 ObsSurObs",
 
   "DASHBOARD_TAB_GENERAL_KEY": "général",
   "DASHBOARD_TAB_TRENDS_KEY": "tendances",
-  "DASHBOARD_TAB_PATIENT_SUMMARY_KEY": "Patient Summary",
+  "DASHBOARD_TAB_PATIENT_SUMMARY_KEY": "Résumé du patient",
   "DASHBOARD_TAB_DISCHARGE_SUMMARY_KEY": "Résumé de décharge",
-  "DASHBOARD_TAB_ORDERS_KEY": "Orders",
+  "DASHBOARD_TAB_ORDERS_KEY": "Commandes",
 
   "LAB_INVESTIGATIONS_KEY":"Enquêtes de laboratoire",
-  "PACS_ORDERS_VISIT_PAGE_KEY": "Visitez la page Pacs commandes",
+  "RADIOLOGY_ORDERS_KEY": "Radiology Orders",
 
-  "DISCHARGE_SUMMARY_DIAGNOSIS_KEY" :"Diagnoses",
+  "DISCHARGE_SUMMARY_DIAGNOSIS_KEY" :"Diagnostics",
 
   "DISCHARGE_SUMMARY_ADVICE_ON_DISCHARGE_KEY": "Conseils sur la décharge",
   "DISCHARGE_SUMMARY_AT_ADMISSION_KEY": "à l'admission",
   "DISCHARGE_SUMMARY_ADMISSION_DETAILS_KEY": "Détails d'admission",
-  "DISCHARGE_SUMMARY_CLINICAL_NOTES_KEY": "Clinical Notes",
-  "DISCHARGE_SUMMARY_AT_DISCHARGE_KEY": "At Discharge",
+  "DISCHARGE_SUMMARY_CLINICAL_NOTES_KEY": "Notes cliniques",
+  "DISCHARGE_SUMMARY_AT_DISCHARGE_KEY": "À la sortie de l'hôpital",
   "DISCHARGE_SUMMARY_TREATMENTS_KEY": "traitements",
 
 
   "OBSERVATIONS_BOARD_LABEL_KEY":"observations",
   "MEDICATIONS_BOARD_LABEL_KEY":"médicaments",
   "ORDERS_BOARD_LABEL_KEY":"ordres",
-  "BACTERIOLOGY_BOARD_LABEL_KEY":"Bacteriology",
+  "BACTERIOLOGY_BOARD_LABEL_KEY":"Bactériologie",
   "CONSULTATION_BOARD_LABEL_KEY":"Consultation",
   "DISPOSITION_BOARD_LABEL_KEY":"disposition",
-  "DIAGNOSIS_BOARD_LABEL_KEY":"Diagnoses",
+  "DIAGNOSIS_BOARD_LABEL_KEY":"Diagnostics",
 
-  "CLINICAL_ORDER_RADIOLOGY_NEED_PRINT": "Need Print for this order.",
-  "CLINICAL_ORDER_RADIOLOGY_NEED_PRINT_BUTTON": "Needs Print",
+  "CLINICAL_ORDER_RADIOLOGY_NEED_PRINT": "Besoin d'impression pour cette commande.",
+  "CLINICAL_ORDER_RADIOLOGY_NEED_PRINT_BUTTON": "Besoin d'imprimer",
 
   "CONSULTATION_PAGE_KEY" :"Consultation",
   "PROGRAM_MANAGEMENT_PAGE_KEY":"Programme des pages de gestion",
@@ -72,22 +72,22 @@
   "PATIENT_DASHBOARD_KEY":"Tableau de bord des patients",
   "PATIENT_VISIT_PAGE_KEY":"Patient Visitez la page",
   "HOME_DASHBOARD_KEY":"Accueil Tableau de bord",
-  "MEDICATION_CHANGE_DURATION_BUTTON": "Change Duration",
+  "MEDICATION_CHANGE_DURATION_BUTTON": "Durée du changement",
   "DASHBOARD_TITLE_Consultation_KEY": "Consultation Notes",
-  "DASHBOARD_TITLE_APPOINTMENTS_KEY": "Appointments",
-  "DASHBOARD_APPOINTMENTS_SLOT_KEY": "Slot",
+  "DASHBOARD_TITLE_APPOINTMENTS_KEY": "Rendez-vous",
+  "DASHBOARD_APPOINTMENTS_SLOT_KEY": "créneau",
   "DASHBOARD_APPOINTMENTS_SERVICE_KEY": "Service",
-  "DASHBOARD_APPOINTMENTS_SERVICE_TYPE_KEY": "Service Appointment Type",
+  "DASHBOARD_APPOINTMENTS_SERVICE_TYPE_KEY": "Type de rendez-vous de service",
   "DASHBOARD_APPOINTMENTS_DATE_KEY": "Date",
-  "DASHBOARD_APPOINTMENTS_PROVIDER_KEY": "Provider",
-  "DASHBOARD_APPOINTMENTS_STATUS_KEY": "Status",
-  "DASHBOARD_PAST_APPOINTMENTS_KEY": "Past Appointments",
-  "DASHBOARD_UPCOMING_APPOINTMENTS_KEY": "Upcoming Appointments",
-  "DASHBOARD_UPCOMING_APPOINTMENTS_KEY_LINK": "List View",
-  "DASHBOARD_NO_PAST_APPOINTMENTS_KEY": "No past appointments",
-  "DASHBOARD_NO_UPCOMING_APPOINTMENTS_KEY": "No upcoming appointments",
-  "DASHBOARD_JOIN_TELECON_KEY" : "Join téléconsultation",
-  "DASHBOARD_TELECON_KEY" : "Téléconsultation",
+  "DASHBOARD_APPOINTMENTS_PROVIDER_KEY": "Fournisseur",
+  "DASHBOARD_APPOINTMENTS_STATUS_KEY": "Statut",
+  "DASHBOARD_PAST_APPOINTMENTS_KEY": "Rendez-vous passés",
+  "DASHBOARD_UPCOMING_APPOINTMENTS_KEY": "Rendez-vous à venir",
+  "DASHBOARD_UPCOMING_APPOINTMENTS_KEY_LINK": "Vue de la liste",
+  "DASHBOARD_NO_PAST_APPOINTMENTS_KEY": "Pas de rendez-vous antérieurs",
+  "DASHBOARD_NO_UPCOMING_APPOINTMENTS_KEY": "Pas de rendez-vous à venir",
+  "DASHBOARD_TELECON_KEY": "Téléconsultation",
+  "DASHBOARD_JOIN_TELECON_KEY": "Participer à une téléconsultation",
   "DASHBOARD_TITLE_FORMS2_DISPLAY_EDIT_FORMS2_FORMS": "Display and Edit Forms (2.0)",
   "PROGRAM_HIV_PROGRAM": "HIV Program",
   "PROGRAM_TB_PROGRAM": "TB Program",
