--- a/openmrs/i18n/registration/locale_ar.json
+++ b/openmrs/i18n/registration/locale_ar.json
@@ -3,23 +3,23 @@
   "REGISTRATION_CREATE_NEW_CONFIG_KEY":"أضف مريض جديد",
   "REGISTRATION_SEARCH_CONFIG_ACCESS_KEY": "e",
   "REGISTRATION_CREATE_NEW_CONFIG_ACCESS_KEY": "n",
-  "REGISTRATION_VIEW_CONFIG_KEY": "عرض",
-  "REGISTRATION_PRINT_REG_CARD_LOCAL_KEY" : "اطبع كارت المتابعة المحلي",
-  "REGISTRATION_PRINT_REG_CARD_KEY":"اطبع كارت المتابعة",
-  "REGISTRATION_PRINT_SUPPLEMENTAL_PAPER":"اطبع أوراق اضافية",
-  "REGISTRATION_AGE_ERROR_KEY":"العمر يجب أن يكون فيمة موجبة",
-  "REGISTRATION_TELEPHONE_NUMBER_ERROR_KEY":"رقم التليفون يجب أن يحتوي علي 6 أرقام علي الأقل",
-  "REGISTRATION_CASTE_TEXT_ERROR_KEY":"الطبقة الاجتماعية يجب أن تحتوي علي حروف وأرقام فقط",
-  "REGISTRATION_BRING_CARD_TEXT_KEY":"يجب أن تحضر كارت المتابعة معك إلي المستشفي",
+  "REGISTRATION_VIEW_CONFIG_KEY": "View",
+  "REGISTRATION_PRINT_REG_CARD_LOCAL_KEY" : "Print Reg. Card (<u>L</u>ocal)",
+  "REGISTRATION_PRINT_REG_CARD_KEY":"<u>P</u>rint Registration Card",
+  "REGISTRATION_PRINT_SUPPLEMENTAL_PAPER":"P<u>r</u>int Supplemental Paper",
+  "REGISTRATION_AGE_ERROR_KEY":"Age should be a positive value",
+  "REGISTRATION_TELEPHONE_NUMBER_ERROR_KEY":"Telephone Number should have minimum 6 digits",
+  "REGISTRATION_CASTE_TEXT_ERROR_KEY":"Caste should contain only alphanumeric characters",
+  "REGISTRATION_BRING_CARD_TEXT_KEY":"It is quite important to bring the card to the hospital.",
   "REGISTRATION_TAKE_MEDICINES_TEXT_KEY": "تناول الدواء تبعا لتعليمات الطبيب",
   "REGISTRATION_TIMINGS_TEXT_KEY":"أوقات التسجيل من 8:30 صباحا إلي 12:00 مساء.",
   "REGISTRATION_OPD_DAYS_TEXT_KEY" : "العيادات الخارجية تعمل أيام الاثنين والأربعاء والجمعة",
   "REGISTRATION_SUNDAYS_HOLIDAY_TEXT_KEY": "الأحد اجازة",
-  "REGISTRATION_SMOKING_INJURIOUS_TEXT_KEY" : "التدخين وتعاطي المخدرات يسبب أمراض القلب والسرطان والأزمات الصحية",
-  "REGISTRATION_INSTITUTE_NAME_TEXT_KEY": "اكس وير للحلول المتكاملة",
+  "REGISTRATION_SMOKING_INJURIOUS_TEXT_KEY" : "Smoking, Tobacco chewing can cause cancer, heart diseases and ASTHMA.",
+  "REGISTRATION_INSTITUTE_NAME_TEXT_KEY": "Jan Swasthya Sahyog",
   "REGISTRATION_INSTITUTE_REGISTERED_TEXT_KEY": "(مسجلة)",
-  "REGISTRATION_INSTITUTE_ADDRESS": "أسيوط",
+  "REGISTRATION_INSTITUTE_ADDRESS": "Ganiyari, District - Bilaspur",
   "FEE_INFORMATION_LOCALE_KEY": "التكاليف النقدية",
   "NUTRITIONAL_VALUES_LOCALE_KEY": "القيم الغذائية",
-  "REGISTRATION_PRINT_WITH_BARCODE": "اطبع الباركود"
+  "REGISTRATION_PRINT_WITH_BARCODE": "Bar<u>c</u>ode Print"
 }
