--- a/openmrs/i18n/registration/locale_de.json
+++ b/openmrs/i18n/registration/locale_de.json
@@ -3,7 +3,7 @@
   "REGISTRATION_CREATE_NEW_CONFIG_KEY":"<u>N</u>eu erstellen",
   "REGISTRATION_SEARCH_CONFIG_ACCESS_KEY": "e",
   "REGISTRATION_CREATE_NEW_CONFIG_ACCESS_KEY": "n",
-  "REGISTRATION_VIEW_CONFIG_KEY": "Ansicht",
+  "REGISTRATION_VIEW_CONFIG_KEY": "View",
   "REGISTRATION_PRINT_REG_CARD_LOCAL_KEY" : "Print Reg. Card (<u>L</u>ocal)",
   "REGISTRATION_PRINT_REG_CARD_KEY":"<u>P</u>rint Registration Card",
   "REGISTRATION_PRINT_SUPPLEMENTAL_PAPER":"P<u>r</u>int Supplemental Paper",
