--- a/openmrs/i18n/registration/locale_fr.json
+++ b/openmrs/i18n/registration/locale_fr.json
@@ -3,23 +3,23 @@
   "REGISTRATION_CREATE_NEW_CONFIG_KEY":"<u>Créer un Nouveau",
   "REGISTRATION_SEARCH_CONFIG_ACCESS_KEY": "e",
   "REGISTRATION_CREATE_NEW_CONFIG_ACCESS_KEY": "n",
-  "REGISTRATION_VIEW_CONFIG_KEY": "Afficher",
-  "REGISTRATION_PRINT_REG_CARD_LOCAL_KEY" : "Imprimer Rég. Carte (locale)",
-  "REGISTRATION_PRINT_REG_CARD_KEY":"Imprimer la carte d'enregistrement",
-  "REGISTRATION_PRINT_SUPPLEMENTAL_PAPER":"Imprimer du papier supplémentaire",
-  "REGISTRATION_AGE_ERROR_KEY":"L'âge doit être une valeur positive",
-  "REGISTRATION_TELEPHONE_NUMBER_ERROR_KEY":"Le numéro de téléphone doit comporter au moins 6 chiffres.",
-  "REGISTRATION_CASTE_TEXT_ERROR_KEY":"La caste ne doit contenir que des caractères alphanumériques",
-  "REGISTRATION_BRING_CARD_TEXT_KEY":"Il est très important d'apporter la carte à l'hôpital.",
+  "REGISTRATION_VIEW_CONFIG_KEY": "View",
+  "REGISTRATION_PRINT_REG_CARD_LOCAL_KEY" : "Print Reg. Card (<u>L</u>ocal)",
+  "REGISTRATION_PRINT_REG_CARD_KEY":"<u>P</u>rint Registration Card",
+  "REGISTRATION_PRINT_SUPPLEMENTAL_PAPER":"P<u>r</u>int Supplemental Paper",
+  "REGISTRATION_AGE_ERROR_KEY":"Age should be a positive value",
+  "REGISTRATION_TELEPHONE_NUMBER_ERROR_KEY":"Telephone Number should have minimum 6 digits",
+  "REGISTRATION_CASTE_TEXT_ERROR_KEY":"Caste should contain only alphanumeric characters",
+  "REGISTRATION_BRING_CARD_TEXT_KEY":"It is quite important to bring the card to the hospital.",
   "REGISTRATION_TAKE_MEDICINES_TEXT_KEY": "Prenez les médicaments selon les instructions du médecin.",
   "REGISTRATION_TIMINGS_TEXT_KEY":"Inscription Les horaires sont de 8:30 à 12:00.",
   "REGISTRATION_OPD_DAYS_TEXT_KEY" : "Les jours de la DPO sont le lundi, le mercredi et le vendredi.",
   "REGISTRATION_SUNDAYS_HOLIDAY_TEXT_KEY": "Dimanches sont des vacances.",
-  "REGISTRATION_SMOKING_INJURIOUS_TEXT_KEY" : "Fumer, mâcher du tabac peut causer le cancer, les maladies cardiaques et l'ASTHME.",
+  "REGISTRATION_SMOKING_INJURIOUS_TEXT_KEY" : "Smoking, Tobacco chewing can cause cancer, heart diseases and ASTHMA.",
   "REGISTRATION_INSTITUTE_NAME_TEXT_KEY": "Jan Swasthya Sahyog",
   "REGISTRATION_INSTITUTE_REGISTERED_TEXT_KEY": "(Immatriculé)",
-  "REGISTRATION_INSTITUTE_ADDRESS": "Ganiari, District - Bilaspur",
+  "REGISTRATION_INSTITUTE_ADDRESS": "Ganiyari, District - Bilaspur",
   "FEE_INFORMATION_LOCALE_KEY": "Informations sur les frais",
   "NUTRITIONAL_VALUES_LOCALE_KEY": "Valeurs nutritionnelles",
-  "REGISTRATION_PRINT_WITH_BARCODE": "Imp<u>r</u>imier de code à barres"
+  "REGISTRATION_PRINT_WITH_BARCODE": "Bar<u>c</u>ode Print"
 }
