--- a/openmrs/i18n/registration/locale_lo.json
+++ b/openmrs/i18n/registration/locale_lo.json
@@ -3,19 +3,19 @@
   "REGISTRATION_CREATE_NEW_CONFIG_KEY":"Create <u>N</u>ew",
   "REGISTRATION_SEARCH_CONFIG_ACCESS_KEY": "e",
   "REGISTRATION_CREATE_NEW_CONFIG_ACCESS_KEY": "n",
-  "REGISTRATION_VIEW_CONFIG_KEY": "ເບິ່ງ",
+  "REGISTRATION_VIEW_CONFIG_KEY": "View",
   "REGISTRATION_PRINT_REG_CARD_LOCAL_KEY" : "Print Reg. Card (<u>L</u>ocal)",
   "REGISTRATION_PRINT_REG_CARD_KEY":"<u>P</u>rint Registration Card",
   "REGISTRATION_PRINT_SUPPLEMENTAL_PAPER":"P<u>r</u>int Supplemental Paper",
-  "REGISTRATION_AGE_ERROR_KEY":"ອາຍຸ ຄວນມີຕັ້ງແຕ່ 1 ປີ ຂື້ນໄປ",
-  "REGISTRATION_TELEPHONE_NUMBER_ERROR_KEY":"ເບີໂທລະສັບຄວນມີຢ່າງໜ້ອຍ 6 ຕົວເລກ ",
-  "REGISTRATION_CASTE_TEXT_ERROR_KEY":"ຄວນມີພຽງຕົວອັກສອນແລະຕົວເລກເທົ່ານັ້ນ",
+  "REGISTRATION_AGE_ERROR_KEY":"Age should be a positive value",
+  "REGISTRATION_TELEPHONE_NUMBER_ERROR_KEY":"Telephone Number should have minimum 6 digits",
+  "REGISTRATION_CASTE_TEXT_ERROR_KEY":"Caste should contain only alphanumeric characters",
   "REGISTRATION_BRING_CARD_TEXT_KEY":"It is quite important to bring the card to the hospital.",
   "REGISTRATION_TAKE_MEDICINES_TEXT_KEY": "ກິນຢາຕາມ ຄຳແນະນຳ ຂອງທ່ານ ໝໍ",
   "REGISTRATION_TIMINGS_TEXT_KEY":"Registration Timings are from 8:30 am to 12:00 pm.",
   "REGISTRATION_OPD_DAYS_TEXT_KEY" : "ຮັບ ຄົນເຈັບພາຍນອກ ແມ່ນ ຈັນ - ສຸກ",
   "REGISTRATION_SUNDAYS_HOLIDAY_TEXT_KEY": "ວັນອາທິດ ພັກ",
-  "REGISTRATION_SMOKING_INJURIOUS_TEXT_KEY" : "ການູບຢາ ແລະ ການຄ້ຽວໝາກ ແມ່ນສາມາດ ກໍ່ໃຫ້ເກີດ ມະເຮັງ, ໂລດຫົວໃຈ ແລະ ASTHMA ໄດ້",
+  "REGISTRATION_SMOKING_INJURIOUS_TEXT_KEY" : "Smoking, Tobacco chewing can cause cancer, heart diseases and ASTHMA.",
   "REGISTRATION_INSTITUTE_NAME_TEXT_KEY": "Jan Swasthya Sahyog",
   "REGISTRATION_INSTITUTE_REGISTERED_TEXT_KEY": "(ລົງທະບຽນແລ້ວ)",
   "REGISTRATION_INSTITUTE_ADDRESS": "Ganiyari, District - Bilaspur",
