--- a/openmrs/i18n/registration/locale_pt_BR.json
+++ b/openmrs/i18n/registration/locale_pt_BR.json
@@ -3,23 +3,23 @@
   "REGISTRATION_CREATE_NEW_CONFIG_KEY":"Criar <u>N</u>ovo",
   "REGISTRATION_SEARCH_CONFIG_ACCESS_KEY": "e",
   "REGISTRATION_CREATE_NEW_CONFIG_ACCESS_KEY": "n",
-  "REGISTRATION_VIEW_CONFIG_KEY": "Visualizar",
-  "REGISTRATION_PRINT_REG_CARD_LOCAL_KEY" : "Imprimir crachá (<u>L</u>ocal)",
-  "REGISTRATION_PRINT_REG_CARD_KEY":"<u>I</u>mprimir Crachá",
-  "REGISTRATION_PRINT_SUPPLEMENTAL_PAPER":"I<u>m</u>primir Documentação Complementar",
-  "REGISTRATION_AGE_ERROR_KEY":"Idade deve ser um valor positivo",
-  "REGISTRATION_TELEPHONE_NUMBER_ERROR_KEY":"O número de telefone deve conter pelo menos 6 dígitos",
-  "REGISTRATION_CASTE_TEXT_ERROR_KEY":"Classe social deve conter somente caracteres alfanuméricos",
-  "REGISTRATION_BRING_CARD_TEXT_KEY":"É muito importante trazer o cartão para o hospital.",
+  "REGISTRATION_VIEW_CONFIG_KEY": "View",
+  "REGISTRATION_PRINT_REG_CARD_LOCAL_KEY" : "Print Reg. Card (<u>L</u>ocal)",
+  "REGISTRATION_PRINT_REG_CARD_KEY":"<u>P</u>rint Registration Card",
+  "REGISTRATION_PRINT_SUPPLEMENTAL_PAPER":"P<u>r</u>int Supplemental Paper",
+  "REGISTRATION_AGE_ERROR_KEY":"Age should be a positive value",
+  "REGISTRATION_TELEPHONE_NUMBER_ERROR_KEY":"Telephone Number should have minimum 6 digits",
+  "REGISTRATION_CASTE_TEXT_ERROR_KEY":"Caste should contain only alphanumeric characters",
+  "REGISTRATION_BRING_CARD_TEXT_KEY":"It is quite important to bring the card to the hospital.",
   "REGISTRATION_TAKE_MEDICINES_TEXT_KEY": "Tomar os remédios conforme orientação médica.",
   "REGISTRATION_TIMINGS_TEXT_KEY":"Horários de Inscrição são entre 8:30 am e 12:00 pm.",
   "REGISTRATION_OPD_DAYS_TEXT_KEY" : "Os dias do Departamento Ambulatorial são Segunda, Quarta, Sexta.",
   "REGISTRATION_SUNDAYS_HOLIDAY_TEXT_KEY": "Domingos são recesso.",
-  "REGISTRATION_SMOKING_INJURIOUS_TEXT_KEY" : "Fumar e mascar tabaco podem causar câncer, doenças do coração e asma.",
-  "REGISTRATION_INSTITUTE_NAME_TEXT_KEY": "Hospital",
+  "REGISTRATION_SMOKING_INJURIOUS_TEXT_KEY" : "Smoking, Tobacco chewing can cause cancer, heart diseases and ASTHMA.",
+  "REGISTRATION_INSTITUTE_NAME_TEXT_KEY": "Jan Swasthya Sahyog",
   "REGISTRATION_INSTITUTE_REGISTERED_TEXT_KEY": "(Registrado)",
-  "REGISTRATION_INSTITUTE_ADDRESS": "Endereço",
+  "REGISTRATION_INSTITUTE_ADDRESS": "Ganiyari, District - Bilaspur",
   "FEE_INFORMATION_LOCALE_KEY": "Taxas",
   "NUTRITIONAL_VALUES_LOCALE_KEY": "Valores nutricionais",
-  "REGISTRATION_PRINT_WITH_BARCODE": "Imprimir Có<u>d</u>igo de barras"
+  "REGISTRATION_PRINT_WITH_BARCODE": "Bar<u>c</u>ode Print"
 }
