--- a/openmrs/i18n/registration/locale_zh.json
+++ b/openmrs/i18n/registration/locale_zh.json
@@ -3,23 +3,23 @@
   "REGISTRATION_CREATE_NEW_CONFIG_KEY":"新建<u>N</u>",
   "REGISTRATION_SEARCH_CONFIG_ACCESS_KEY": "e",
   "REGISTRATION_CREATE_NEW_CONFIG_ACCESS_KEY": "n",
-  "REGISTRATION_VIEW_CONFIG_KEY": "查看",
-  "REGISTRATION_PRINT_REG_CARD_LOCAL_KEY" : "打印登记卡（本地<u>L</u>）",
-  "REGISTRATION_PRINT_REG_CARD_KEY":"打印挂号单 <u>P</u>",
-  "REGISTRATION_PRINT_SUPPLEMENTAL_PAPER":"打印补充页（<u>r</u>）",
-  "REGISTRATION_AGE_ERROR_KEY":"年龄应该时正数",
-  "REGISTRATION_TELEPHONE_NUMBER_ERROR_KEY":"电话号码至少需要6位数字",
-  "REGISTRATION_CASTE_TEXT_ERROR_KEY":"种姓应仅包含字母数字字符",
-  "REGISTRATION_BRING_CARD_TEXT_KEY":"带卡到医院非常重要",
+  "REGISTRATION_VIEW_CONFIG_KEY": "View",
+  "REGISTRATION_PRINT_REG_CARD_LOCAL_KEY" : "Print Reg. Card (<u>L</u>ocal)",
+  "REGISTRATION_PRINT_REG_CARD_KEY":"<u>P</u>rint Registration Card",
+  "REGISTRATION_PRINT_SUPPLEMENTAL_PAPER":"P<u>r</u>int Supplemental Paper",
+  "REGISTRATION_AGE_ERROR_KEY":"Age should be a positive value",
+  "REGISTRATION_TELEPHONE_NUMBER_ERROR_KEY":"Telephone Number should have minimum 6 digits",
+  "REGISTRATION_CASTE_TEXT_ERROR_KEY":"Caste should contain only alphanumeric characters",
+  "REGISTRATION_BRING_CARD_TEXT_KEY":"It is quite important to bring the card to the hospital.",
   "REGISTRATION_TAKE_MEDICINES_TEXT_KEY": "按照医嘱服药",
   "REGISTRATION_TIMINGS_TEXT_KEY":"登记时间从8:30到中午12:00。",
   "REGISTRATION_OPD_DAYS_TEXT_KEY" : "门诊日在周一、三、五。",
   "REGISTRATION_SUNDAYS_HOLIDAY_TEXT_KEY": "周日是假期。",
-  "REGISTRATION_SMOKING_INJURIOUS_TEXT_KEY" : "吸烟、咀嚼烟草会导致癌症、心脏病和哮喘。",
-  "REGISTRATION_INSTITUTE_NAME_TEXT_KEY": "扬·斯瓦斯蒂亚·萨约格",
+  "REGISTRATION_SMOKING_INJURIOUS_TEXT_KEY" : "Smoking, Tobacco chewing can cause cancer, heart diseases and ASTHMA.",
+  "REGISTRATION_INSTITUTE_NAME_TEXT_KEY": "Jan Swasthya Sahyog",
   "REGISTRATION_INSTITUTE_REGISTERED_TEXT_KEY": "（已挂号的）",
-  "REGISTRATION_INSTITUTE_ADDRESS": "加尼亚里，区 - 比拉斯布尔",
+  "REGISTRATION_INSTITUTE_ADDRESS": "Ganiyari, District - Bilaspur",
   "FEE_INFORMATION_LOCALE_KEY": "费用信息",
   "NUTRITIONAL_VALUES_LOCALE_KEY": "营养值",
-  "REGISTRATION_PRINT_WITH_BARCODE": "二维码打印（<u>c</u>）"
+  "REGISTRATION_PRINT_WITH_BARCODE": "Bar<u>c</u>ode Print"
 }
